fixing typo in Twitter URL

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/matthew-mcclure"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/bidie_mcclure"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://twitter.com/birdie_mcclure"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/matthew-mcclure"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/mcclurematthew"><i class="fab fa-linkedin"></i></a>
     </div>
